[package]
name = "face"
version = "0.1.0"
authors = ["kianm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
skia-safe = { version = "0.34.0",  features = ["gl"] }
glutin = "0.26.0"
gl = "0.14.0"